--- a/index.html
+++ b/index.html
@@ -18,226 +18,169 @@
     <p>Productos adorables y seguros para los más chiquitos</p>
   </section>
 
-  <section class="products" id="productos">
-    <div class="product-card">
-    <img src="/assets/juguete.png" alt="Babero Dino">
-    <h3>Babero Dino</h3>
-    <p>$2.500</p>
-    <div class="quantity-controls">
-      <button onclick="changeTempQuantity('Babero Dino', -1)">−</button>
-      <span id="temp-Babero Dino">0</span>
-      <button onclick="changeTempQuantity('Babero Dino', 1)">+</button>
-    </div>
-    <button onclick="addToCart('Babero Dino')">Agregar al carrito</button>
-    <p class="stock-info">Stock disponible: <span id="stock-Babero Dino">5</span></p>
-  </div>
-
-<div class="product-card">
-    <img src="/assets/juguete.png" alt="Body Estrellas">
-    <h3>Body Estrellas</h3>
-    <p>$3.800</p>
-    <div class="quantity-controls">
-      <button onclick="changeTempQuantity('Body Estrellas', -1)">−</button>
-      <span id="temp-Body Estrellas">0</span>
-      <button onclick="changeTempQuantity('Body Estrellas', 1)">+</button>
-    </div>
-    <button onclick="addToCart('Body Estrellas')">Agregar al carrito</button>
-    <p class="stock-info">Stock disponible: <span id="stock-Body Estrellas">5</span></p>
-  </div>
-
-  <div class="product-card">
-    <img src="/assets/juguete.png" alt="Sonajero Arcoiris">
-    <h3>Sonajero Arcoiris</h3>
-    <p>$1.900</p>
-    <div class="quantity-controls">
-      <button onclick="changeTempQuantity('Sonajero Arcoiris', -1)">−</button>
-      <span id="temp-Sonajero Arcoiris">0</span>
-      <button onclick="changeTempQuantity('Sonajero Arcoiris', 1)">+</button>
-    </div>
-    <button onclick="addToCart('Sonajero Arcoiris')">Agregar al carrito</button>
-    <p class="stock-info">Stock disponible: <span id="stock-Sonajero Arcoiris">5</span></p>
-  </div>
-
-  <div class="product-card">
-    <img src="/assets/juguete.png" alt="Babero Dino">
-    <h3>Producto A</h3>
-    <p>$2.500</p>
-    <div class="quantity-controls">
-      <button onclick="changeTempQuantity('Producto A', -1)">−</button>
-      <span id="temp-Producto A">0</span>
-      <button onclick="changeTempQuantity('Producto A', 1)">+</button>
-    </div>
-    <button onclick="addToCart('Producto A')">Agregar al carrito</button>
-    <p class="stock-info">Stock disponible: <span id="stock-Producto A">5</span></p>
-  </div>
-
-  <div class="product-card">
-    <img src="/assets/juguete.png" alt="Body Estrellas">
-    <h3>Producto B</h3>
-    <p>$3.800</p>
-    <div class="quantity-controls">
-      <button onclick="changeTempQuantity('Producto B', -1)">−</button>
-      <span id="temp-Producto B">0</span>
-      <button onclick="changeTempQuantity('Producto B', 1)">+</button>
-    </div>
-    <button onclick="addToCart('Producto B')">Agregar al carrito</button>
-    <p class="stock-info">Stock disponible: <span id="stock-Producto B">5</span></p>
-  </div>
-
-  <div class="product-card">
-    <img src="/assets/juguete.png" alt="Sonajero Arcoiris">
-    <h3>Producto C</h3>
-    <p>$1.900</p>
-    <div class="quantity-controls">
-      <button onclick="changeTempQuantity('Producto C', -1)">−</button>
-      <span id="temp-Producto C">0</span>
-      <button onclick="changeTempQuantity('Producto C', 1)">+</button>
-    </div>
-    <button onclick="addToCart('Producto C')">Agregar al carrito</button>
-    <p class="stock-info">Stock disponible: <span id="stock-Producto C">5</span></p>
-  </div>
-
-  </section>
+  <!-- Contenedor dinámico de productos -->
+  <section class="products" id="productos"></section>
 
   <section class="banner">
     <h2>🛒 Carrito</h2>
     <div id="cart"></div>
     <br>
-    </div>
-
     <div class="cart-actions">
-  <button onclick="clearCart()">🗑️ Limpiar carrito</button>
-  <button onclick="sendToWhatsApp()">📦 Enviar pedido por WhatsApp</button>
-</div>
-
-
+      <button onclick="clearCart()">🗑️ Limpiar carrito</button>
+      <button onclick="sendToWhatsApp()">📦 Enviar pedido por WhatsApp</button>
+    </div>
   </section>
 
   <footer id="contacto">
     <p>© 2025 Mi Tienda Infantil – Todos los derechos reservados</p>
   </footer>
 
+  <!-- PapaParse -->
+  <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
+
   <script>
-  let cart = {};
-  const tempQuantities = {};
-  const prices = {
-    "Babero Dino": 2500,
-    "Body Estrellas": 3800,
-    "Sonajero Arcoiris": 1900,
-    "Producto A": 2500,
-    "Producto B": 3800,
-    "Producto C": 1900
-  };
+    const sheetCSVUrl = "https://docs.google.com/spreadsheets/d/e/2PACX-1vRDD3exfrAx0n46egsSfOu3gNLOWaRHcSzBII-BAhMb0uk-BD_ZE03YK3NSNrbj_rDE3Nd_TWPAgdCH/pub?gid=0&single=true&output=csv";
 
-  const stockLimits = {
-    "Babero Dino": 5,
-    "Body Estrellas": 3,
-    "Sonajero Arcoiris": 10,
-    "Producto A": 7,
-    "Producto B": 4,
-    "Producto C": 8
-  };
+    const prices = {};
+    const stockLimits = {};
+    const tempQuantities = {};
+    const cart = {};
 
-  function renderCart() {
-    const container = document.getElementById('cart');
-    container.innerHTML = '';
+    function updateFromSheet(data) {
+      const productsContainer = document.getElementById('productos');
+      productsContainer.innerHTML = ''; // Limpiar productos anteriores
 
-    let total = 0;
-    for (const item in cart) {
-      if (cart[item] > 0) {
-        const subtotal = cart[item] * prices[item];
-        container.innerHTML += `<p>• ${item} x${cart[item]} - $${subtotal}</p>`;
-        total += subtotal;
+      data.forEach(row => {
+        const name = row.name?.trim();
+        const price = Number(row.price);
+        const stock = Number(row.stock);
+        const image = row.image?.trim();
+
+        if (!name || isNaN(price) || isNaN(stock)) return;
+
+        prices[name] = price;
+        stockLimits[name] = stock;
+
+        const card = document.createElement('div');
+        card.className = 'product-card';
+
+        card.innerHTML = `
+          ${image ? `<img src="${image}" alt="${name}">` : ''}
+          <h3>${name}</h3>
+          <p>$${price}</p>
+          <div class="quantity-controls">
+            <button onclick="changeTempQuantity('${name}', -1)">−</button>
+            <span id="temp-${name}">0</span>
+            <button onclick="changeTempQuantity('${name}', 1)">+</button>
+          </div>
+          <button onclick="addToCart('${name}')">Agregar al carrito</button>
+          <p class="stock-info">Stock disponible: <span id="stock-${name}">${stock}</span></p>
+        `;
+
+        productsContainer.appendChild(card);
+      });
+      console.log("Cargados:", data.map(r => r.name));
+    }
+
+    function renderCart() {
+      const container = document.getElementById('cart');
+      container.innerHTML = '';
+
+      let total = 0;
+      for (const item in cart) {
+        if (cart[item] > 0) {
+          const subtotal = cart[item] * prices[item];
+          container.innerHTML += `<p>• ${item} x${cart[item]} - $${subtotal}</p>`;
+          total += subtotal;
+        }
+      }
+
+      if (total > 0) {
+        container.innerHTML += `<p><strong>Total: $${total}</strong></p>`;
+      }
+
+      updateWhatsAppButton();
+    }
+
+    function updateWhatsAppButton() {
+      const whatsappBtn = document.querySelector(".cart-actions button:last-child");
+      const hasItems = Object.values(cart).some(qty => qty > 0);
+
+      whatsappBtn.disabled = !hasItems;
+      whatsappBtn.style.opacity = hasItems ? "1" : "0.6";
+      whatsappBtn.style.cursor = hasItems ? "pointer" : "not-allowed";
+    }
+
+    function changeTempQuantity(name, change) {
+      if (!tempQuantities[name]) tempQuantities[name] = 0;
+      const newQty = tempQuantities[name] + change;
+
+      if (newQty >= 0 && newQty <= (stockLimits[name] || 1000)) {
+        tempQuantities[name] = newQty;
+        const tempSpan = document.getElementById(`temp-${name}`);
+        if (tempSpan) tempSpan.textContent = newQty;
       }
     }
 
-    if (total > 0) {
-      container.innerHTML += `<p><strong>Total: $${total}</strong></p>`;
+    function addToCart(name) {
+      const toAdd = tempQuantities[name] || 0;
+      if (toAdd === 0) return;
+
+      if (!cart[name]) cart[name] = 0;
+      const newQty = cart[name] + toAdd;
+
+      if (newQty <= (stockLimits[name] || 1000)) {
+        cart[name] = newQty;
+        tempQuantities[name] = 0;
+        const tempSpan = document.getElementById(`temp-${name}`);
+        if (tempSpan) tempSpan.textContent = 0;
+        renderCart();
+      } else {
+        alert(`Solo hay ${stockLimits[name]} unidades disponibles de ${name}.`);
+      }
     }
 
-    updateWhatsAppButton();
-  }
-
-  function updateWhatsAppButton() {
-    const whatsappBtn = document.querySelector(".cart-actions button:last-child");
-    const hasItems = Object.values(cart).some(qty => qty > 0);
-
-    whatsappBtn.disabled = !hasItems;
-    whatsappBtn.style.opacity = hasItems ? "1" : "0.6";
-    whatsappBtn.style.cursor = hasItems ? "pointer" : "not-allowed";
-  }
-
-  function changeTempQuantity(name, change) {
-    if (!tempQuantities[name]) tempQuantities[name] = 0;
-    const newQty = tempQuantities[name] + change;
-
-    if (newQty >= 0 && newQty <= (stockLimits[name] || 1000)) {
-      tempQuantities[name] = newQty;
-      const tempSpan = document.getElementById(`temp-${name}`);
-      if (tempSpan) tempSpan.textContent = newQty;
-    }
-  }
-
-  function addToCart(name) {
-    const toAdd = tempQuantities[name] || 0;
-    if (toAdd === 0) return;
-
-    if (!cart[name]) cart[name] = 0;
-    const newQty = cart[name] + toAdd;
-
-    if (newQty <= (stockLimits[name] || 1000)) {
-      cart[name] = newQty;
-      tempQuantities[name] = 0;
-      const tempSpan = document.getElementById(`temp-${name}`);
-      if (tempSpan) tempSpan.textContent = 0;
+    function clearCart() {
+      for (const key in cart) cart[key] = 0;
+      Object.keys(tempQuantities).forEach(name => {
+        tempQuantities[name] = 0;
+        const tempSpan = document.getElementById(`temp-${name}`);
+        if (tempSpan) tempSpan.textContent = 0;
+      });
       renderCart();
-    } else {
-      alert(`Solo hay ${stockLimits[name]} unidades disponibles de ${name}.`);
-    }
-  }
-
-  function clearCart() {
-    cart = {};
-    Object.keys(tempQuantities).forEach(name => {
-      tempQuantities[name] = 0;
-      const tempSpan = document.getElementById(`temp-${name}`);
-      if (tempSpan) tempSpan.textContent = 0;
-    });
-    renderCart();
-  }
-
-  function sendToWhatsApp() {
-    const hasItems = Object.values(cart).some(qty => qty > 0);
-    if (!hasItems) {
-      alert("El carrito está vacío. Agregá productos antes de enviar el pedido.");
-      return;
     }
 
-    let message = "🛒 Pedido:\n";
-    for (const item in cart) {
-      if (cart[item] > 0) {
-        message += `• ${item} x${cart[item]}\n`;
+    function sendToWhatsApp() {
+      const hasItems = Object.values(cart).some(qty => qty > 0);
+      if (!hasItems) {
+        alert("El carrito está vacío. Agregá productos antes de enviar el pedido.");
+        return;
       }
+
+      let message = "🛒 Pedido:\n";
+      for (const item in cart) {
+        if (cart[item] > 0) {
+          message += `• ${item} x${cart[item]}\n`;
+        }
+      }
+
+      const phone = "5493794278347";
+      const url = `https://wa.me/${phone}?text=${encodeURIComponent(message)}`;
+      window.open(url, '_blank');
     }
 
-    const phone = "5493794278347";
-    const url = `https://wa.me/${phone}?text=${encodeURIComponent(message)}`;
-    window.open(url, '_blank');
-  }
-
-  function renderStockInfo() {
-    for (const name in stockLimits) {
-      const span = document.getElementById(`stock-${name}`);
-      if (span) span.textContent = stockLimits[name];
-    }
-  }
-
-  document.addEventListener("DOMContentLoaded", () => {
-    renderCart();
-    renderStockInfo();
-  });
-</script>
-
+    document.addEventListener("DOMContentLoaded", () => {
+      Papa.parse(sheetCSVUrl, {
+        download: true,
+        header: true,
+        complete: function(results) {
+          updateFromSheet(results.data);
+          renderCart();
+        }
+      });
+    });
+  </script>
 
 </body>
 </html>
+  
